--- a/circle.yml
+++ b/circle.yml
@@ -10,4 +10,5 @@ dependencies:
     - case $CIRCLE_NODE_INDEX in 0) rvm use 2.1.0 --default ;; 1) rvm use 2.4.1 --default ;; esac
 test:
   override:
-    - bundle exec rspec: { parallel: true }
+    - ruby -v ; bundle exec rspec:
+      parallel: true
